force-app/main/default/src/objects/PJN_Network_Object_Setting__mdt/PJN_Network_Object_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Network Object Setting</label>
    <pluralLabel>Network Object Settings</pluralLabel>
</CustomObject>