force-app/main/default/src/objects/PJN_Network_Object_Setting__mdt/fields/PJN_DCR_Record_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_DCR_Record_Field_Id__c</fullName>
    <description>Field API Name to link the record.</description>
    <inlineHelpText>Field API Name to link the record.</inlineHelpText>
    <label>DCR Record Field Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>