force-app/main/default/src/objects/PJN_Network_Object_Setting__mdt/fields/PJN_DCR_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_DCR_Record_Type_Name__c</fullName>
    <description>Record type associated to the DCR to be created.</description>
    <label>DCR Record Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>