force-app/main/default/src/objects/PJN_Network_Object_Setting__mdt/fields/PJN_DCR_Record_Types_Allowed__c.field-meta.xml
<CustomField>
    <fullName>PJN_DCR_Record_Types_Allowed__c</fullName>
    <description>Record type names which allows DCR creation. This names should be separate by comma. &apos;All&apos; will include every single record type.</description>
    <inlineHelpText>Record type names which allows DCR creation. This names should be separate by comma. &apos;All&apos; will include every single record type.</inlineHelpText>
    <label>SObject Record Types Allowed</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>