force-app/main/default/src/objects/PJN_Network_Object_Setting__mdt/fields/PJN_Parent_Account_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Account_Field_Name__c</fullName>
    <description>Parent Account field API name associated.</description>
    <label>Parent Account Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>