force-app/main/default/src/objects/PJN_Network_Object_Setting__mdt/fields/PJN_Search_Record_Types_Allowed__c.field-meta.xml
<CustomField>
    <fullName>PJN_Search_Record_Types_Allowed__c</fullName>
    <description>Record types allowed to search in Network.</description>
    <label>Search Record Types Allowed</label>
    <type>TextArea</type>
</CustomField>