force-app/main/default/src/objects/PJN_Network_Object_Setting__mdt/fields/PJN_SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_SObject_Name__c</fullName>
    <description>SObject Name for the DCR.</description>
    <label>SObject Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>