force-app/main/default/src/objects/PJN_Network_Object_Setting__mdt/fields/PJN_Sync_Delay__c.field-meta.xml
<CustomField>
    <fullName>PJN_Sync_Delay__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sync delay in minutes - No delay with value 0</description>
    <inlineHelpText>Sync delay in minutes - No delay with value 0</inlineHelpText>
    <label>Sync Delay</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>