force-app/main/default/src/objects/PJN_Network_Object_Setting__mdt/fields/PJN_Sync_Record_Types_Allowed__c.field-meta.xml
<CustomField>
    <fullName>PJN_Sync_Record_Types_Allowed__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <label>Sync Record Types Allowed</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>